# harvester

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.rst  pyproject.toml  setup.py  upload-to-pip.sh
.github/workflows/: cicd.yaml  publish.yaml
harvester/: __init__.py  models.py  user_agents.py  utils.py
tests/: test_fields.py  test_models.py  test_utils.py
tests/fields/: test_char_field.py  test_file_field.py
tests/utils/: test_fetch_content.py
